<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textSize="30sp"
        android:textColor="#69bc20"
        android:text="@string/welcomeMsg"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enterName"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:id="@+id/nameBut"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submitName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:id="@+id/okButton"/>

</RelativeLayout>
