<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".GameOverActivity">
    <TableLayout
        android:layout_width="wrap_content"
        android:stretchColumns="*"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp">

        <TableRow
            android:id="@+id/resRow1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/namePl0" android:text="@string/defaultName"
                android:layout_weight="1" android:background="#dcdcdc"
                android:textColor="#000000"
                android:padding="5dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/resPl0" android:text="@string/defaultVal"
                android:layout_weight="1" android:background="#d3d3d3"
                android:textColor="#000000"
                android:padding="5dp"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:id="@+id/resRow2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/namePl1" android:text="@string/defaultName"
                android:layout_weight="1" android:background="#dcdcdc"
                android:textColor="#000000"
                android:padding="5dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/resPl1" android:text="@string/defaultVal"
                android:layout_weight="0.1" android:background="#d3d3d3"
                android:textColor="#000000"
                android:padding="5dp"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:id="@+id/resRow3"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/namePl2" android:text="@string/defaultName"
                android:layout_weight="0.1" android:background="#dcdcdc"
                android:textColor="#000000"
                android:padding="5dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/resPl2" android:text="@string/defaultVal"
                android:layout_weight="1" android:background="#d3d3d3"
                android:textColor="#000000"
                android:padding="5dp"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:id="@+id/resRow4"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/namePl3" android:text="@string/defaultName"
                android:layout_weight="1" android:background="#dcdcdc"
                android:textColor="#000000"
                android:padding="5dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/resPl3" android:text="@string/defaultVal"
                android:layout_weight="1" android:background="#d3d3d3"
                android:textColor="#000000"
                android:padding="5dp"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:id="@+id/resRow5"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/namePl4" android:text="@string/defaultName"
                android:layout_weight="1" android:background="#dcdcdc"
                android:textColor="#000000"
                android:padding="5dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/resPl4" android:text="@string/defaultVal"
                android:layout_weight="1" android:background="#d3d3d3"
                android:textColor="#000000"
                android:padding="5dp"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:id="@+id/resRow6"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/namePl5" android:text="@string/defaultName"
                android:layout_weight="1" android:background="#dcdcdc"
                android:textColor="#000000"
                android:padding="5dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/resPl5" android:text="@string/defaultVal"
                android:layout_weight="1" android:background="#d3d3d3"
                android:textColor="#000000"
                android:padding="5dp"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:id="@+id/resRow7"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/namePl6" android:text="@string/defaultName"
                android:layout_weight="1" android:background="#dcdcdc"
                android:textColor="#000000"
                android:padding="5dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/resPl6" android:text="@string/defaultVal"
                android:layout_weight="1" android:background="#d3d3d3"
                android:textColor="#000000"
                android:padding="5dp"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:id="@+id/resRow8"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/namePl7" android:text="@string/defaultName"
                android:layout_weight="1" android:background="#dcdcdc"
                android:textColor="#000000"
                android:padding="5dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/resPl7" android:text="@string/defaultVal"
                android:layout_weight="1" android:background="#d3d3d3"
                android:textColor="#000000"
                android:padding="5dp"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:id="@+id/resRow9"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/namePl8" android:text="@string/defaultName"
                android:layout_weight="1" android:background="#dcdcdc"
                android:textColor="#000000"
                android:padding="5dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/resPl8" android:text="@string/defaultVal"
                android:layout_weight="0.1" android:background="#d3d3d3"
                android:textColor="#000000"
                android:padding="5dp"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:id="@+id/resRow10"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/namePl9" android:text="@string/defaultName"
                android:layout_weight="1" android:background="#dcdcdc"
                android:textColor="#000000"
                android:padding="5dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/resPl9" android:text="@string/defaultVal"
                android:layout_weight="0.1" android:background="#d3d3d3"
                android:textColor="#000000"
                android:padding="5dp"
                android:gravity="center"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:id="@+id/goMessage"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newGame"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/newGame"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restartGame"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/restartGame"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quitGame"
        android:layout_marginTop="140dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/quitGame"/>

</RelativeLayout>